# suzent

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  LICENSE-ASSETS  QUICKSTART.md  README.md  README.zh-CN.md  SECURITY.md  TERMS-OF-USE-ASSETS.md  app.py  index.html  package.json  pyproject.toml  ruff.toml  server.py  sitemap.xml  start_dev.py  suzent-pairing-token-design.md
.claude/: settings.local.json
404/: index.html
apps/suzent-installer/: Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json
apps/suzent-installer/capabilities/: default.json
apps/suzent-installer/src/: main.rs
apps/suzent-installer/ui/: index.html
config/: default.example.yaml  model_capabilities.json  permissions.example.yaml  production.example.yaml  providers.json  social.example.json
docker/: Dockerfile.sandbox  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  microsandbox.Dockerfile  sandbox-compose.override.yml.example  sandbox-compose.yml
docs/: API_REFERENCE.md  DEPLOYMENT.md  IMPROVEMENTS_SUMMARY.md  KEYBOARD_SHORTCUTS.md  README.md  index.html  searxng-setup.md  tools.md
frontend/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
markdown-page/: index.html
mobile/: App.tsx  README.md  app.json  package.json
scripts/: README.md  build_backend.py  build_backend_fast.py  build_tauri.ps1  build_tauri.sh  bump_version.py  bundle_python.py  fix_timestamps.py  manage_api_keys.py  migrate_add_sandbox_enabled.py  (+6 more)
(+1501 files in other folders)
