[package]
name = "suzent-installer"
version = "0.6.6"
edition = "2021"
description = "Suzent Desktop Installer"
build = "build.rs"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
